Experimental build for Rasbpian Buster/Pi 4

--- a/build-tensor-pi/Dockerfile
+++ b/build-tensor-pi/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         build-essential \
         curl \
         libfreetype6-dev \
-        libpng12-dev \
+        libpng-dev \
         libzmq3-dev \
         pkg-config \
         python3-dev \
