Experimental build for Rasbpian Buster/Pi 4

--- a/build-tensor-pi/Dockerfile
+++ b/build-tensor-pi/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         build-essential \
         curl \
         libfreetype6-dev \
+        libhdf5-dev \
         libpng-dev \
         libzmq3-dev \
         pkg-config \
@@ -21,9 +22,9 @@ RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
         rm get-pip.py
 
 RUN pip --no-cache-dir install \
+        matplotlib && \
         ipykernel \
         jupyter \
-        matplotlib && \
             python -m ipykernel.kernelspec
 
 ADD tensorflow-1.14.0-cp37-cp37m-linux_armv7l.whl .
