Experimental build for Rasbpian Buster/Pi 4

--- a/build-tensor-pi/Dockerfile
+++ b/build-tensor-pi/Dockerfile
@@ -22,7 +22,7 @@ RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
         rm get-pip.py
 
 RUN pip --no-cache-dir install \
-        matplotlib && \
+        matplotlib ipykernel && \
         ipykernel \
         jupyter \
             python -m ipykernel.kernelspec
