--- a/build-tensor-pi/Dockerfile
+++ b/build-tensor-pi/Dockerfile
@@ -22,7 +22,7 @@ RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
         rm get-pip.py
 
 RUN pip --no-cache-dir install \
-        matplotlib ipykernel && \
+        matplotlib ipykernel jupyer && \
         python -m ipykernel.kernelspec
 
 ADD tensorflow-1.14.0-cp37-cp37m-linux_armv7l.whl .
